Cascading Change Log

unreleased

  Changed c.f.s.StackElement#close() behavior to close elements from the top of the stack.

1.0.8

  Fixed bug where Hadoop FS shutdown hooks prevented cleanup of c.f.Flow intermediate files.

  Fixed bug where c.t.MultiTap was not accounted for when planning a c.c.Cascade.

  Fixed bug where operations in the default package caused NPE when calculating the stacktrace.

  Added c.f.StepCounters enum and now increment the counters Tuples_Read, Tuples_Written, Tuples_Trapped.

  Fixes for instabilities when using traps in some instances.

  Workaround for bug in o.a.h.f.s.NativeS3FileSystem where a null is returned when getting a FileStatus array
  in some cases.

1.0.7

  Fixed bug where c.o.r.RegexSplitter did not consistently split incoming values if the value had blank
  fields between the split delimiter. This only occurs if the incoming tuple is declared Fields.UNKNOWN
  and won't affect any tuple with declared field names. Though this is an incompatible change, the bug
  breaks the contract of the splitter.

  Deprecated all S3 supporting classes, including c.t.S3fs. The s3n:// protocol is the preferred S3 interface.

  Fixed bug where c.t.Hfs caused a NPE from the NativeS3FileSytem when attempting to delete the root directory.
  Hfs now detects a delete is attempted on the root dir, and returns immediately.

1.0.6

  Fixed bug where a uri path to a s3n://bucket/ could cause an NPE when determining mod time on the path.

  Fixed bug where sink c.s.Scheme sink fields were not being consulted during planning. This fix may
  cause planner errors in existing applications where the sink fields are not actually available in the incoming
  tuple stream.

  Updated application jar discovery to provide more sane defaults supporting simple cases.

  Fixed bug where default properties in nested j.u.Properties object were not being copied.

1.0.5
